# high-dpi-tkinter

./: LICENSE  MANIFEST.in  Pipfile  README.md  README_JP.md  build.note  setup.cfg
.github/workflows/: python-publish.yml
src/hdpitkinter/: __init__.py  __main__.py
