[metadata]
name = hdpitkinter
version = attr: src.hdpitkinter.VERSION
description = Resolve blurred tkinter text + scaling on Windows 10 high DPI displays
license = MIT License
url = https://github.com/not-dev/sharp-tkinter-window-high-dpi

[options]
packages = find:
package_dir = = src

[options.packages.find]
where = src
