[metadata]
name = hdpitkinter
version = attr: src.hdpitkinter.VERSION
description = Sharpen blurry Tkinter scaling on Windows 10 high DPI displays
long_description = file: README.md
license = MIT License
url = https://github.com/not-dev/high-dpi-tkinter

[options]
packages = find:
package_dir = = src

[options.packages.find]
where = src
