[metadata]
name = hdpitkinter
version = attr: src.hdpitkinter.VERSION
description = Sharpen blurry Tkinter scaling on Windows 10 high DPI displays
license = MIT License
url = https://github.com/not-dev/high-dpi-tkinter
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src

[options.packages.find]
where = src
